fixed cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1547,7 +1547,7 @@ Photography Page Slider
 --------------------------------------------------------------*/
 .features-item {
   margin: 20px 0;
-  text-align: center;
+  text-align: left;
 }
 
 .features-icon,
